Bug 173311 - ssh port does not work with konsole bookmarks
Summary: ssh port does not work with konsole bookmarks
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-22 17:11 UTC by Michael Maraist
Modified: 2009-02-23 03:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Maraist 2008-10-22 17:11:59 UTC
Version:           2.0 (using KDE 4.0.5)
OS:                Linux
Installed from:    Fedora RPMs

I should probably reopen 71177 because that is exactly the issue I'm having.  
ssh://user@host:port  is completely ignoring the port for:
Qt: 4.3.4
KDE: 4.0.3 (KDE 4.0.3)
Konsole: 2.0

Even though 71177 suggests this was fixed 4 years ago.

I typically have 50+ hosts (10 open at a time) and 15+ local shell environments (for logging, DB, and compiling/subversioning).  In the old konsole (KDE 3.5.8, konsole 1.6.6), I'd trivially create 60 'session's, but now I hear the proper way to deal with, the remote-hosts at least, is the bookmarks (since profiles are more of a premium now).  But port-specific SSH's don't work in either my FC 8 nor the new FC 9's konsole.  This (along with the change in tab/titlebar labeling) is making it impossible for me to have more than 20 terminals.
Comment 1 atto 2008-12-28 13:10:49 UTC
Same problem here with Konsole version 2.2 and KDE 4.1.85.
Comment 2 Kurt Hindenburg 2009-02-22 07:34:02 UTC
SVN commit 929785 by hindenburg:

Allow ssh port to work in bookmarks.

BUG: 173311


 M  +2 -0      SessionController.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=929785
Comment 3 Kurt Hindenburg 2009-02-23 03:24:34 UTC
SVN commit 930321 by hindenburg:

Backport to allow ssh:// in bookmarks.

CCBUG: 173311


 M  +2 -0      SessionController.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=930321