Allow ssh port to work in bookmarks.

BUG: 173311

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=929785